--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Introduction to Our Research
-description: Our research organized in topics.
+title: Research Topics
+description: We are a research team in DAMO Academy, Alibaba Group, dedicated to developing next generation computer vision algorithms and technologies.
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-slate
