--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Research Topics
+title: Fundamental Research team
 description: We are a research team in DAMO Academy, Alibaba Group, dedicated to developing next generation computer vision algorithms and technologies.
 show_downloads: false
 google_analytics:
