--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Fundamental Research team
-description: We are a research team in DAMO Academy, Alibaba Group, dedicated to developing next generation computer vision algorithms and technologies.
+title: Fundamental Research in Super Vision Lab
+description: We are part of DAMO Academy, Alibaba Group, dedicated to developing next generation computer vision algorithms and technologies.
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-slate
